# history-game

./: .gitignore  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md
datamodel/: CMakeLists.txt
datamodel/src/history_game/datamodel/action/: action_sequence.cpp  action_sequence.h  action_type.cpp  action_type.h
datamodel/src/history_game/datamodel/drives/: action_context.cpp  action_context.h
datamodel/src/history_game/datamodel/entity/: entity.cpp  entity.h
datamodel/src/history_game/datamodel/memory/: memory_entry.cpp  memory_entry.h  memory_episode.cpp  memory_episode.h  perception_buffer.cpp  perception_buffer.h  witnessed_sequence.cpp  witnessed_sequence.h
datamodel/src/history_game/datamodel/npc/: drive.cpp  drive.h  npc.cpp  npc.h  npc_identity.cpp  npc_identity.h
datamodel/src/history_game/datamodel/object/: object.cpp  object.h
datamodel/src/history_game/datamodel/relationship/: relationship.cpp  relationship.h  relationship_target.cpp  relationship_target.h
datamodel/src/history_game/datamodel/world/: position.cpp  position.h  simulation_clock.cpp  simulation_clock.h  world.cpp  world.h
datamodel/tests/: entity_test.cpp
docs/: spec.md  system_architecture.md
include/action/: action_execution.h  action_sequence.h  action_type.h
include/behavior/: action_selection.h
include/datamodel/drives/: action_context.h
include/datamodel/memory/: witnessed_sequence.h
include/datamodel/npc/: npc.h  npc_identity.h
include/datamodel/object/: object.h
include/datamodel/world/: position.h  simulation_clock.h  world.h
include/drives/: drive_dynamics.h  drive_impact.h
include/entity/: entity.h
include/memory/: episode_formation.h  memory_entry.h  memory_episode.h  memory_system.h  perception_buffer.h  witnessed_sequence.h
include/npc/: drive.h  npc.h  npc_identity.h
include/object/: object.h
include/perception/: perception_system.h
include/relationship/: relationship.h  relationship_target.h
include/simulation/: npc_update.h  simulation_runner.h
include/systems/action/: action_execution.h
include/systems/drives/: drive_dynamics.h  drive_impact.h
include/systems/memory/: episode_formation.h  memory_system.h
include/systems/perception/: perception_system.h
include/systems/simulation/: npc_update.h
include/utility/: log_init.h  serialization.h
include/world/: world.h
src/: CMakeLists.txt  main.cpp  test_inside_out.cpp
src/history_game/datamodel/action/: action_sequence.h
src/history_game/datamodel/drives/: action_context.cpp
src/history_game/datamodel/entity/: entity.cpp  entity.h
src/history_game/datamodel/memory/: memory_entry.h  memory_episode.h  perception_buffer.cpp  perception_buffer.h  witnessed_sequence.cpp
src/history_game/datamodel/npc/: npc.cpp  npc.h
src/history_game/datamodel/relationship/: relationship.cpp  relationship.h  relationship_target.h
src/history_game/datamodel/world/: simulation_clock.cpp
src/history_game/systems/behavior/: action_selection.h
src/history_game/systems/drives/: drive_dynamics.h
src/history_game/systems/memory/: episode_formation.cpp  memory_system.cpp
src/history_game/systems/simulation/: npc_update.cpp  simulation_runner.cpp  simulation_runner.h
src/history_game/systems/utility/: serialization.cpp
src/utility/: serialization.cpp
systems/: CMakeLists.txt
systems/src/history_game/systems/action/: action_execution.cpp  action_execution.h
systems/src/history_game/systems/behavior/: action_selection.cpp  action_selection.h
systems/src/history_game/systems/drives/: drive_dynamics.cpp  drive_dynamics.h  drive_impact.cpp  drive_impact.h
systems/src/history_game/systems/memory/: episode_formation.cpp  episode_formation.h  memory_system.cpp  memory_system.h
systems/src/history_game/systems/perception/: perception_system.cpp  perception_system.h
systems/src/history_game/systems/simulation/: npc_update.cpp  npc_update.h  simulation_runner.cpp  simulation_runner.h
systems/src/history_game/systems/utility/: log_init.cpp  log_init.h  serialization.cpp  serialization.h
systems/tests/: drive_test.cpp  memory_test.cpp  serialization_test.cpp
tests/: drive_test.cpp  entity_test.cpp  memory_test.cpp  serialization_test.cpp
visualizer/: README.md  generate_test_data.cpp  index.html  test_simulation_data.json
visualizer/css/: styles.css
visualizer/js/: visualizer.js
